i just added som few changes to the navbar and i added aimations

--- a/place2.html
+++ b/place2.html
@@ -1,4 +1,12 @@
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +18,7 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="./place.css">
+    <link rel="stylesheet" href="place.css">
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Poppins:wght@300;400;500;800&display=swap"
         rel="stylesheet">
@@ -34,12 +42,14 @@
             </p>
           
             <div class="inn"  style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-                <img src="./images/IMG-20221102-WA0062 1 (1).png" width="70%" alt="">
+                <img src="./images/WhatsApp Image 2022-11-02 at 1.23.23 PM.jpeg" width="70%" alt="">
             </div>
 
    
         </div>
     </div>
+
+   
     <div class="last mt-3 container-fluid px-5 " >
         <div class="row ">
             <div class="col   ">
@@ -78,4 +88,6 @@
     <script src="./bootstrap-5.2.0-dist/js/bootstrap.bundle.js"></script>
 </body>
 
+</html>
+</body>
 </html>
