just finished everything

--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
                                 <div class="last mt-4">
                                     <h3>FOLLOW US ON</h3>
                                     <div class="  button-for-social-media-link">
-
+                                       
                                         <div class="btn "> <i class="fa-brands fa-twitter"></i></div>
-                                        <div class="btn "> <i class="fa-brands fa-whatsapp"></i></div>
-                                        <div class="btn "> <i class="fa-brands fa-instagram"></i></div>
+                                        <div class="btn "> <a href="09039580430"><i class="fa-brands fa-whatsapp"></i></a></div>
+                                        <div class="btn text-dark "><a href=" https://www.instagram.com/_exclusivephotography/"><i class="fa-brands fa-instagram"></i> </a> </div>
                                     </div>
                                 </div>
 
@@ -270,8 +270,8 @@
                     </div>
                     <div class="col-sm-2  button-for-social-media-link">
                         <div class="btn "> <i class="fa-brands fa-twitter"></i></div>
-                        <div class="btn "> <i class="fa-brands fa-whatsapp"></i></div>
-                        <div class="btn "> <i class="fa-brands fa-instagram"></i></div>
+                        <div class="btn "><a href="tel:whatsapp://send?phone=+123456789"><i class="fa-brands fa-whatsapp"></i></a></div>
+                        <div class="btn text-dark "><a href=" https://www.instagram.com/_exclusivephotography/"><i class="fa-brands fa-instagram"></i> </a> </div>
                     </div>
                 </div>
                 <div class="row w-100 meet-all">
@@ -297,8 +297,8 @@
                     </div>
                     <div class="col-sm-2  button-for-social-media-link">
                         <div class="btn "> <i class="fa-brands fa-twitter"></i></div>
-                        <div class="btn "> <i class="fa-brands fa-whatsapp"></i></div>
-                        <div class="btn "> <i class="fa-brands fa-instagram"></i></div>
+                        <div class="btn "><a href="tel:whatsapp://send?phone=+123456789"><i class="fa-brands fa-whatsapp"></i></a></div>
+                        <div class="btn text-dark "><a href=" https://www.instagram.com/_exclusivephotography/"><i class="fa-brands fa-instagram"></i> </a> </div>
                     </div>
                 </div>
                 <div class="row w-100 meet-all">
@@ -324,8 +324,8 @@
                     </div>
                     <div class="col-sm-2  button-for-social-media-link">
                         <div class="btn "> <i class="fa-brands fa-twitter"></i></div>
-                        <div class="btn "> <i class="fa-brands fa-whatsapp"></i></div>
-                        <div class="btn "> <i class="fa-brands fa-instagram"></i></div>
+                        <div class="btn "><a href="tel:whatsapp://send?phone=+123456789"><i class="fa-brands fa-whatsapp"></i></a></div>
+                        <div class="btn text-dark "><a href=" https://www.instagram.com/_exclusivephotography/"><i class="fa-brands fa-instagram"></i> </a> </div>
                     </div>
                 </div>
             </div>
@@ -1836,8 +1836,8 @@
                 <div class="  button-for-social-media-link">
 
                     <div class="btn "> <i class="fa-brands fa-twitter"></i></div>
-                    <div class="btn "> <i class="fa-brands fa-whatsapp"></i></div>
-                    <div class="btn "> <i class="fa-brands fa-instagram"></i></div>
+                    <div class="btn "><a href="tel:whatsapp://send?phone=+123456789"><i class="fa-brands fa-whatsapp"></i></a></div>
+                    <div class="btn text-dark "><a href=" https://www.instagram.com/_exclusivephotography/"><i class="fa-brands fa-instagram"></i> </a> </div>
                 </div>
             </div>
 
